[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = {version="0.4.40", features = ["serde"]}
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
mini-redis = "0.4.1"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
uuid = {version="1.15.1", features = ["v4"]}
warp = "0.3.7"
